# Stocks

./: .gitignore  Cargo.toml  Cargo.txt  Makefile  README.md  android-keystore.jks  pubspec.yaml
.cargo/: config.toml
android/app/: build.gradle.kts
lib/: main.dart
src/: app_main.rs  lib.rs  main.rs
ui/: add-dialog.slint  main.slint
