# SPDX-License-Identifier: MIT

[package]
name = "stocks"
version = "1.11.0"
authors = ["Icosagon, Slint Developers <info@slint.dev>"]
edition = "2021"
publish = false
license = "MIT"

#[lib]
#crate-type = ["lib", "cdylib"]
#path = "src/lib.rs"
#name = "gallery_lib"

[[bin]]
path = "src/main.rs"
name = "Stocks"

[dependencies]
slint = { version = "1.11", features = ["backend-android-activity-06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.11"  }

[package.metadata.android]
package = "dev.icosagon.stocks"
apk_name = "stocks"

[package.metadata.android.application]
label = "Stocks"
